--- a/contact/index.html
+++ b/contact/index.html
@@ -26,6 +26,11 @@
 	<script>setup_header()</script>
 	<div class="content_row">
 		<div class="content_cell col4_4">
+			<h1 class="main">Contact</h1>
+		</div>
+	</div>
+	<div class="content_row">
+		<div class="content_cell col4_4">
 			<div>
 				<h1>Bestuur</h1>
 				<table>
@@ -116,7 +121,7 @@
 		<div class="content_cell col2_4">
 			<div>
 				<h1>Locatie</h1>
-				<p>Jan Stapertlaan 14<br>8801 JT Franker</p>
+				<p>Jan Stapertlaan 12<br>8801 JT Franker</p>
 			</div>
 		</div>
 	</div>
