--- a/privacy/index.html
+++ b/privacy/index.html
@@ -22,8 +22,12 @@
 	<script>setup_header()</script>
 	<div class="content_row">
 		<div class="content_cell col4_4">
+			<h1 class="main">Privacybeleid Scouting Andromeda</h1>
+		</div>
+	</div>
+	<div class="content_row">
+		<div class="content_cell col4_4">
 			<div>
-				<h1>Privacybeleid Scouting Andromeda</h1>
 				<p>Scouting Andromeda verwerkt persoonsgegevens uitsluitend voor het verwerken van het lidmaatschap bij de scoutingvereniging en de activiteiten die daarbij horen. Scouting Andromeda hecht veel waarde aan de privacy van haar leden en zorgt er daarom voor dat de gegevens worden beschermd. Wij willen je hierover graag duidelijk en transparant informeren. Dit privacybeleid is van toepassing op alle geautomatiseerde en nietgeautomatiseerde verwerkingen van persoonsgegevens.</p>
 			</div>
 		</div>
