--- a/sociale-veiligheid/index.html
+++ b/sociale-veiligheid/index.html
@@ -22,8 +22,12 @@
 	<script>setup_header()</script>
 	<div class="content_row">
 		<div class="content_cell col4_4">
+			<h1 class="main">Sociale veiligheid</h1>
+		</div>
+	</div>
+	<div class="content_row">
+		<div class="content_cell col4_4">
 			<div>
-				<h1>Sociale veiligheid</h1>
 				<p>Binnen Scouting Andromeda zijn veel vrijwilligers actief, denk bijvoorbeeld aan de leiding maar ook aan de bestuursleden. Deze moeten we kunnen vertrouwen en daarom vindt Scouting Andromeda de “sociale veiligheid” erg belangrijk. De jeugdleden moeten in een veilige en vertrouwde omgeving uitdagende scouting activiteiten moeten kunnen doen.</p>
 			</div>
 		</div>
