--- a/vacatures/index.html
+++ b/vacatures/index.html
@@ -22,8 +22,12 @@
 	<script>setup_header()</script>
 	<div class="content_row">
 		<div class="content_cell col4_4">
+			<h1 class="main">Vacatures bestuur Scouting Andromeda</h1>
+		</div>
+	</div>
+	<div class="content_row">
+		<div class="content_cell col4_4">
 			<div>
-				<h1>Vacatures bestuur Scouting Andromeda</h1>
 				<p>Wij zoeken voor ons verenigingsbestuur invulling voor de volgende functies:</p>
 				<ul>
 					<li><a href="/vacatures/voorzitter-vereniging/" style="color: var(--blue);">Voorzitter</a></li>
