--- a/verhuur/index.html
+++ b/verhuur/index.html
@@ -29,8 +29,13 @@
 	<script>setup_header()</script>
 	<div class="content_row">
 		<div class="content_cell col4_4">
+			<h1 class="main">Verhuur</h1>
+		</div>
+	</div>
+	<div class="content_row">
+		<div class="content_cell col4_4">
 			<div>
-				<h1>Verhuur</h1>
+				
 				<p>Ons gebouw staat doordeweeks vaak leeg. Zonde, we hebben zo’n mooi gebouw dat het zonde is dat er niks gebeurt. Daarom: Als jullie een locatie zoeken om een zomerkamp te regelen of misschien een overnachtingsplaats tijdens de trektocht, of wil je een avond vergaderen maar heb je niet genoeg ruimte? Kom dan eens langs bij het gebouw van Scouting Andromeda in Franeker. Mocht u ons gebouw willen huren of meer willen weten, neem dan contact op met <a href="mailto:verhuur@scouting-andromeda.nl">verhuur@scouting-andromeda.nl</a></p>
 			</div>
 		</div>
@@ -93,7 +98,7 @@
 							<td>€ 60,00</td>
 						</tr>
 						<tr>
-							<td>Hele Dag 10:00 - 00:00<br>(max prijs voor 1 dag 2 dd)</td>
+							<td>Hele dag 10:00 - 00:00<br>(max prijs voor 1 dag = 2 dagdelen = €120)</td>
 							<td>€120,00</td>
 						</tr>
 						<tr>
@@ -118,11 +123,11 @@
 					<tbody>
 						<tr>
 							<td>Per persoon per nacht</td>
-							<td>Minimaal €125 (max 18 pers)<br>+ € 6,50 extra p.p.p.n</td>
+							<td>€125 (t/m 18 personen)<br>+ € 6,50 extra p.p.p.n.*</td>
 						</tr>
 						<tr>
 							<td>Weekend</td>
-							<td>Minimaal €250 (max 18 pers)<br>+ € 6,50 extra p.p.p.n</td>
+							<td>€250 (t/m 18 personen)<br>+ € 6,50 extra p.p.p.n.*</td>
 						</tr>
 						<tr>
 							<td>&nbsp;</td>
@@ -134,6 +139,7 @@
 						</tr>
 					</tbody>
 				</table>
+				<p><b>* p.p.p.n. = per persoon per nacht</b></p>
 				<p>Tarieven verhuur regio: Conform per 1 jan 2024 door regio vastgestelde regiotarieven: Groot clubhuis.</p>
 			</div>
 		</div>
