--- a/sterrenpost/index.html
+++ b/sterrenpost/index.html
@@ -28,6 +28,13 @@
 	<div class="content_row">
 		<div class="content_cell col4_4">
 			<div>
+				<div id="bevestiging" style="padding: 10px; margin: 10px; display: none; background-color: #DFF0D8; border-color: #D6E9C6; color: #3C763D;">Bedankt voor je inschrijving! Je bent ingeschreven.</div>
+				<script>
+					let params = new URLSearchParams(document.location.search);
+					if (params.has("bevestiging")) {
+						document.getElementById("bevestiging").style.display = ""
+					}
+				</script>
 				<h2>Alle edities</h2>
 				<p>Hier zijn de edities van Sterrenpost te vinden:</p>
 				<!-- <ul>
@@ -43,9 +50,10 @@
 		<div class="content_cell col4_4">
 			<div>
 				<h2>Sterrenpost ontvangen in je mailbox</h2>
-				<p>Het is mogelijk om de Sterrenpost in je mailbox te ontvangen zodra deze uitkomt.<br>
-				Vul daarvoor onderstaand formulier in</p>
-				<iframe width="540" height="613" src="https://dbf0899a.sibforms.com/serve/MUIFAHYuSQB6ozrC0gBGUmwE90gNMNJ4jZp83L41B2fzCsSDYjMVVpxUguJLGe8KOw_ZTDVcKQhKRc86EHejpBfyZtAkWiGdHmx6VVq2oxJjhn78F4QVSCUjnC9IXV6SWqrnuYjQSRIlylTCQwskejwttdMEBh5Mi84sPypIGwQHfDvqhEDTmw62WunTJj8deZdMlItmhYSn5hpy6w==" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
+				<p>Het is mogelijk om de Sterrenpost in je mailbox te ontvangen zodra deze uitkomt.</p>
+				<a href="/sterrenpost/inschrijven">
+					<div class="button">Klik op deze knop en vul het formulier in</div>
+				</a>
 			</div>
 		</div>
 	</div>
