Agenda-embeddings verwijderen
Agenda-embeddings werken niet meer, dus verwijderd.

--- a/speltakken/scouts/index.html
+++ b/speltakken/scouts/index.html
@@ -59,7 +59,7 @@
 	<div class="content_row">
 		<div class="content_cell col4_4">
 			<!-- Originele url: https://outlook.office365.com/owa/calendar/0add23944e0143d4b387188cc457695e@Scoutingandromeda.onmicrosoft.com/5c423de3958e46cca0eff9b3d5c168d33564576508721321456/calendar.html -->
-			<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Europe%2FAmsterdam&showPrint=0&showTitle=0&showDate=0&showCalendars=0&showTz=0&mode=AGENDA&src=dmFuMXJtNDZlMGFpMWtodmhlb2ZkaGRmcXRzcmlnbmdAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23f8a83d" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+			<!-- <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Europe%2FAmsterdam&showPrint=0&showTitle=0&showDate=0&showCalendars=0&showTz=0&mode=AGENDA&src=dmFuMXJtNDZlMGFpMWtodmhlb2ZkaGRmcXRzcmlnbmdAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23f8a83d" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe> -->
 		</div>
 	</div>
 	<div id="footer">
