--- a/speltakken/welpen/index.html
+++ b/speltakken/welpen/index.html
@@ -59,7 +59,7 @@
 	<div class="content_row">
 		<div class="content_cell col4_4">
 			<!-- Originele url: https://outlook.office365.com/owa/calendar/0add23944e0143d4b387188cc457695e@Scoutingandromeda.onmicrosoft.com/c66dc9daf00d4444b473c8424f6a8b68820962982566014834/calendar.HTML -->
-			<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Europe%2FAmsterdam&showPrint=0&showTitle=0&showTz=0&mode=AGENDA&showCalendars=0&showNav=0&src=YzZrMGRibjRkMHVjcm5uMDBvZWZjMDlyazN0aDRvaDhAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%238cbe4f" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+			<!-- <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Europe%2FAmsterdam&showPrint=0&showTitle=0&showTz=0&mode=AGENDA&showCalendars=0&showNav=0&src=YzZrMGRibjRkMHVjcm5uMDBvZWZjMDlyazN0aDRvaDhAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%238cbe4f" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe> -->
 		</div>
 	</div>
 	<div id="footer">
