--- a/verhuur/index.html
+++ b/verhuur/index.html
@@ -147,7 +147,7 @@
 	<div class="content_row">
 		<div class="content_cell col4_4">
 			<!-- Originele url: https://outlook.office365.com/owa/calendar/0add23944e0143d4b387188cc457695e@Scoutingandromeda.onmicrosoft.com/0c76c6ee32734a4babf72a807db641e914192337916124635976/calendar.html -->
-			<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Europe%2FAmsterdam&showPrint=0&showCalendars=0&showTitle=0&showTz=0&src=bWc4YXMwMGVyaWl1cWhqdDA4bGE0dHVtNnJqYjFoZ2hAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%234285F4" style="border: none;" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+			<!-- <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Europe%2FAmsterdam&showPrint=0&showCalendars=0&showTitle=0&showTz=0&src=bWc4YXMwMGVyaWl1cWhqdDA4bGE0dHVtNnJqYjFoZ2hAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%234285F4" style="border: none;" width="100%" height="600" frameborder="0" scrolling="no"></iframe> -->
 		</div>
 	</div>
 	<div class="content_row">
