--- a/speltakken/explorers/index.html
+++ b/speltakken/explorers/index.html
@@ -59,7 +59,7 @@
 	<div class="content_row">
 		<div class="content_cell col4_4">
 			<!-- Originele url: https://outlook.office365.com/owa/calendar/0add23944e0143d4b387188cc457695e@Scoutingandromeda.onmicrosoft.com/a0e6f45af25f4008859d0cb0e1b026cb14167440410845789825/calendar.html -->
-			<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Europe%2FAmsterdam&showPrint=0&showTitle=0&mode=AGENDA&showDate=0&showCalendars=0&showTz=0&src=aWwwbXJsNm05MmRnaTVnN3FldDBnaDJ1MWw2cGEyYzNAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23be3150" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+			<!-- <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Europe%2FAmsterdam&showPrint=0&showTitle=0&mode=AGENDA&showDate=0&showCalendars=0&showTz=0&src=aWwwbXJsNm05MmRnaTVnN3FldDBnaDJ1MWw2cGEyYzNAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23be3150" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe> -->
 		</div>
 	</div>
 	<div id="footer">
