--- a/contact/index.html
+++ b/contact/index.html
@@ -87,12 +87,12 @@
 					<tbody>
 						<tr>
 							<td>Welpen</td>
-							<td>Alies, Bernard, Nolke, Suzanne, Tess</td>
+							<td>Alies, Bernard, Chris, Nolke, Suzanne, Tess</td>
 							<td><a href="mailto:welpen@scouting-andromeda.nl">welpen@scouting-andromeda.nl</a></td>
 						</tr>
 						<tr>
 							<td>Scouts</td>
-							<td>Ewan, Linda, Roelof, Tjesse</td>
+							<td>Eva, Ewan, Linda, Roelof, Roos, Tjesse</td>
 							<td><a href="mailto:scouts@scouting-andromeda.nl">scouts@scouting-andromeda.nl</a></td>
 						</tr>
 						<tr>
